--- a/app/admin/templates/admin/admin_sidebar.html
+++ b/app/admin/templates/admin/admin_sidebar.html
@@ -36,7 +36,7 @@
                 {% if VDATA['sidebar'] is not none %}
                 
                     {% for header, models in VDATA['sidebar'].items() %}
-                        <li class="app-sidebar__heading">{{header}}</li>
+                        <li id="header_{{header}}" class="app-sidebar__heading">{{header}}</li>
                         {% for model in models %}
                             {% if model.__amname__ in session['permissions'] %}
                             {% if session['permissions'][model.__amname__]['read'] or current_user.is_superuser %}
