--- a/prime_admin/templates/lms/registration.html
+++ b/prime_admin/templates/lms/registration.html
@@ -261,10 +261,10 @@
                                 <div class="custom-radio custom-control"><input type="checkbox" id="book_none" name="books" value="book_none "class="custom-control-input"><label class="custom-control-label" for="book_none">
                                     No book
                                 </label></div>
-                                <div class="custom-radio custom-control"><input type="checkbox" id="book1" name="books" value="book_1 "class="custom-control-input"><label class="custom-control-label" for="book1">
+                                <div class="custom-radio custom-control"><input type="checkbox" id="book1" name="books" value="volume1" class="custom-control-input"><label class="custom-control-label" for="book1">
                                     Volume 1
                                 </label></div>
-                                <div class="custom-radio custom-control"><input type="checkbox" id="book2" name="books" value="book_2" class="custom-control-input"><label class="custom-control-label" for="book2">
+                                <div class="custom-radio custom-control"><input type="checkbox" id="book2" name="books" value="volume2" class="custom-control-input"><label class="custom-control-label" for="book2">
                                     Volume 2
                                 </label></div>
                             </div>
@@ -363,8 +363,8 @@
 
 {% block inner_footer %}
 <div class="app-footer-right">
-    <button type="button" class="btn btn-secondary" onclick="history.back(-1)"
-        style="margin-right: 10px;">Cancel</button>
+    <!-- <button type="button" class="btn btn-secondary" onclick="history.back(-1)"
+        style="margin-right: 10px;">Cancel</button> -->
     <button id="btn_clear_entries" class="btn-wide btn btn-danger" type="button" value="Clear Entry" style="margin-right: 10px;">Clear Entries</button>
     <input form="register_form" type="submit" class="btn btn-primary" name='btn_submit' value="Confirm">
     <!-- <input form="register_form" type="submit" style="margin-right: 10px;" name='btn_submit' 
