--- a/app/admin/templates/admin/admin_base.html
+++ b/app/admin/templates/admin/admin_base.html
@@ -48,9 +48,9 @@
         {% endblock %}
 
         <!-- ADMIN OPTIONS -->
-        <!-- {% block options %}
+        {% block options %}
         {% include 'admin/admin_options.html' %}
-        {% endblock %} -->
+        {% endblock %}
 
         <div class="app-main">
         <!-- ADMIN SIDEBAR -->
