--- a/app/admin/templates/admin/admin_base.html
+++ b/app/admin/templates/admin/admin_base.html
@@ -67,7 +67,7 @@
                 {% block outer_footer %}
                 <div class="app-wrapper-footer">
                     <div class="app-footer">
-                        <div class="app-footer__inner bg-happy-fisher">
+                        <div class="app-footer__inner bg-arielle-smile">
                             {% block inner_footer %}
                             {% endblock %}
                         </div>
