--- a/app/admin/templates/admin/admin_header.html
+++ b/app/admin/templates/admin/admin_header.html
@@ -1,4 +1,4 @@
-<div class="app-header header-shadow bg-happy-fisher">
+<div class="app-header header-shadow bg-arielle-smile">
     <div class="app-header__logo">
         <div class="logo-src"></div>
         <div class="header__pane ml-auto">
@@ -68,8 +68,9 @@
                                 </a>
                                 <div tabindex="-1" role="menu" aria-hidden="true"
                                      class="dropdown-menu dropdown-menu-right">
-                                    <a href="{{ url_for('bp_auth.edit_user',oid=UID) }}"
-                                       class="dropdown-item">User Account</a>
+                                    <!-- <a href="{{ url_for('bp_auth.edit_user',oid=UID) }}"
+                                       class="dropdown-item">User Account</a> -->
+                                    <button disabled type="button" tabindex="0" class="dropdown-item">User Account</button>
                                     <a href="{{ url_for('bp_auth.logout') }}" class="dropdown-item">Log out</a>
                                 </div>
                             </div>
