--- a/prime_admin/templates/lms/members_table.html
+++ b/prime_admin/templates/lms/members_table.html
@@ -65,7 +65,7 @@
 
                 </div>
                 <div class="row">
-                    <div class="col-lg-6 col-xl-4">
+                    <div class="col-lg-6 col-xl-3">
                         <div class="card mb-3 widget-content">
                             <div class="widget-content-wrapper">
                                 <div class="widget-content-left">
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-xl-4">
+                    <div class="col-lg-6 col-xl-3">
                         <div class="card mb-3 widget-content">
                             <div class="widget-content-wrapper">
                                 <div class="widget-content-left">
@@ -93,7 +93,21 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-xl-4">
+                    <div class="col-lg-6 col-xl-3">
+                        <div class="card mb-3 widget-content">
+                            <div class="widget-content-wrapper">
+                                <div class="widget-content-left">
+                                    <div class="widget-heading">TOTAL OF PREMIUM PAYMENT</div>
+                                    <div class="widget-subheading"></div>
+                                </div>
+                                <div class="widget-content-right">
+                                    <div class="widget-numbers text-primary"><span id="total_premium_payment">₱ 0.00</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-xl-3">
                         <div class="card mb-3 widget-content">
                             <div class="widget-content-wrapper">
                                 <div class="widget-content-left">
