--- a/prime_admin/templates/lms/client_view_modal.html
+++ b/prime_admin/templates/lms/client_view_modal.html
@@ -12,7 +12,8 @@
                 <div class="main-card mb-3 card">
                     <div class="card-body">
                         <div class="form-row">
-                    
+                            <input type="hidden" class="form-control" id="client_id" value="">
+                            
                             <div class="col-md-4 mb-3">
                                 <label for="view_last_name">Last Name</label>
                                 <input style="font-weight: bold;" disabled type="text" class="form-control" id="view_last_name" name="view_last_name"
@@ -129,6 +130,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <!-- <button id="btn_edit" type="button" class="btn btn-primary">Edit</button> -->
                 </div>
             </div>
         </div>
