--- a/app/admin/templates/admin/admin_base.html
+++ b/app/admin/templates/admin/admin_base.html
@@ -28,6 +28,7 @@
     <!-- <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}"> -->
     <link href="{{ url_for('bp_admin.static', filename='DataTables/datatables.css') }}" rel="stylesheet">
     <link href="{{ url_for('bp_admin.static', filename='DataTables/dataTables.checkboxes.css') }}" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.css" rel="stylesheet"/>
     {% endblock %}
 
     {% block extra_head %}
@@ -85,6 +86,7 @@
 <script type="text/javascript" src="{{ url_for('bp_admin.static', filename='DataTables/datatables.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('bp_admin.static', filename='DataTables/dataTables.checkboxes.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('bp_admin.static', filename='js/sidebar.js') }}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/js/toastr.js"></script>
 <!-- <script>
     (function() {
       var header_color = document.getElementById("header_color29");
